force-app/main/default/objects/NS_ServiceStations__c/NS_ServiceStations__c.object-meta.xml
<CustomObject>
    <description>It identifies the Service stations related to an Account.</description>
    <label>Operating Station</label>
    <nameField>
        <label>Operating Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating Stations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>