force-app/main/default/objects/NS_ServiceStations__c/fields/NS_ControllingStationCity__c.field-meta.xml
<CustomField>
    <fullName>NS_ControllingStationCity__c</fullName>
    <description>It is the Controlling Station City for the account</description>
    <label>Controlling Station City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>