force-app/main/default/objects/NS_ServiceStations__c/fields/NS_ControllingStationCode__c.field-meta.xml
<CustomField>
    <fullName>NS_ControllingStationCode__c</fullName>
    <description>It is a Transportation Controlling Station Code for the account</description>
    <label>Controlling Station Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>