force-app/main/default/objects/NS_ServiceStations__c/fields/NS_ControllingStationName__c.field-meta.xml
<CustomField>
    <fullName>NS_ControllingStationName__c</fullName>
    <description>It is a Transportation Controlling Operating Station Name for the account</description>
    <label>Controlling Station Name</label>
    <length>19</length>
    <type>Text</type>
</CustomField>