force-app/main/default/objects/NS_ServiceStations__c/fields/NS_ControllingStationState__c.field-meta.xml
<CustomField>
    <fullName>NS_ControllingStationState__c</fullName>
    <description>It is the Controlling Station State for the account.</description>
    <label>Controlling Station State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>