force-app/main/default/objects/NS_ServiceStations__c/fields/NS_DivisionCode__c.field-meta.xml
<CustomField>
    <fullName>NS_DivisionCode__c</fullName>
    <description>It is the OSS division code that an Account is mapped to</description>
    <label>Division Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>