force-app/main/default/objects/NS_ServiceStations__c/fields/NS_DivisionName__c.field-meta.xml
<CustomField>
    <fullName>NS_DivisionName__c</fullName>
    <description>It is the OSS division name that an Account is mapped to</description>
    <label>Division Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>