force-app/main/default/objects/NS_ServiceStations__c/fields/NS_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>NS_EffectiveDate__c</fullName>
    <description>It indicates the future activation date of a new station.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>