force-app/main/default/objects/NS_ServiceStations__c/fields/NS_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>NS_ExpirationDate__c</fullName>
    <description>It indicates the termination date of a new station</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>