force-app/main/default/objects/NS_ServiceStations__c/fields/NS_OperatingStationCity__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStationCity__c</fullName>
    <description>It is the Operating Station City for the account</description>
    <label>Operating Station City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>