force-app/main/default/objects/NS_ServiceStations__c/fields/NS_OperatingStationCode__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStationCode__c</fullName>
    <description>It is the Operating Station Code for the account</description>
    <label>Operating Station Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>