force-app/main/default/objects/NS_ServiceStations__c/fields/NS_OperatingStationName__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStationName__c</fullName>
    <description>It is the Operating Station Name for the account</description>
    <label>Operating Station Name</label>
    <length>19</length>
    <type>Text</type>
</CustomField>