force-app/main/default/objects/NS_ServiceStations__c/fields/NS_OperatingStationState__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStationState__c</fullName>
    <description>It is the Operating Station State for the account.</description>
    <label>Operating Station State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>