force-app/main/default/objects/NS_ServiceStations__c/fields/NS_Prev_OperatingStationCode__c.field-meta.xml
<CustomField>
    <fullName>NS_Prev_OperatingStationCode__c</fullName>
    <description>Operating station from to be populated through Integration.</description>
    <label>Prev Operating Station Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>