force-app/main/default/objects/NS_ServiceStations__c/fields/NS_StationCode_6_Spell__c.field-meta.xml
<CustomField>
    <fullName>NS_StationCode_6_Spell__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Station code 6 spell</description>
    <externalId>true</externalId>
    <label>Station Code 6 Spell</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>