force-app/main/default/objects/NS_ServiceStations__c/fields/NS_StationStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_StationStatus__c</fullName>
    <description>It indicates the status of a service station i.e, Active or Inactive.</description>
    <label>Station Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>