force-app/main/default/objects/NS_ServiceStations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NS_OperatingStationCode__c</columns>
    <columns>NS_OperatingStationCity__c</columns>
    <columns>NS_OperatingStationState__c</columns>
    <columns>NS_ControllingStationName__c</columns>
    <columns>NS_ControllingStationCity__c</columns>
    <columns>NS_ControllingStationState__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>